@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{672, 87}, {793, 1081}}</string>
+	<string>{{585, 72}, {870, 1094}}</string>
 </dict>
 </plist>
